--- a/src/crypto/CMakeLists.txt
+++ b/src/crypto/CMakeLists.txt
@@ -238,8 +238,10 @@ add_executable(
   bio/bio_test.cc
   bytestring/bytestring_test.cc
   chacha/chacha_test.cc
+  cmac/cmac_test.cc
   compiler_test.cc
   constant_time_test.cc
+  curve25519/spake25519_test.cc
   curve25519/x25519_test.cc
   dh/dh_test.cc
   dsa/dsa_test.cc
