external/boringssl: Sync to 41c10e2b5f37edce8b9f292f7f3bacb7e30e25c4.
This includes the following changes:

https://boringssl.googlesource.com/boringssl/+log/0f5ecd3a854546d943104e1f7421e489b7f4d5aa..41c10e2b5f37edce8b9f292f7f3bacb7e30e25c4

Test: atest CtsLibcoreTestCases
Change-Id: Id591c50e7be7e568fa345c39c256b47fb7940965

--- a/src/crypto/CMakeLists.txt
+++ b/src/crypto/CMakeLists.txt
@@ -131,6 +131,7 @@ if(${ARCH} STREQUAL "x86_64")
     chacha/chacha-x86_64.${ASM_EXT}
     cipher_extra/aes128gcmsiv-x86_64.${ASM_EXT}
     cipher_extra/chacha20_poly1305_x86_64.${ASM_EXT}
+    hrss/asm/poly_rq_mul.S
   )
 endif()
 
@@ -275,6 +276,7 @@ add_library(
   evp/sign.c
   ex_data.c
   hkdf/hkdf.c
+  hrss/hrss.c
   lhash/lhash.c
   mem.c
   obj/obj.c
@@ -455,6 +457,7 @@ add_executable(
   fipsmodule/rand/ctrdrbg_test.cc
   hkdf/hkdf_test.cc
   hmac_extra/hmac_test.cc
+  hrss/hrss_test.cc
   lhash/lhash_test.cc
   obj/obj_test.cc
   pem/pem_test.cc
